# grid2viz

./: .gitignore  .slugignore  AUTHORS.txt  CustomAgent.py  ExpertAssist.py  Grid2Viz_demo.ipynb  LicensesInformation.md  MANIFEST.in  Pipfile  Procfile  README.md  config.ini  dev_simulation.py  generate_sample.py  launch_grid2viz.py  manager_simulation.py  postBuild  pyproject.toml  requirements.txt  setup.py  simulation_clbk.py  simulation_lyt.py
.circleci/: config.yml
assets/: main.css
binder/: requirements.txt
data/agents/nodisc_powerlinegreedy/: dict_observation_space.json
data/agents/nodisc_powerlinegreedy/0/: env_modifications.npy  episode_meta.json  rewards.npy
data/agents/nodisc_powerlinegreedy/0037/: agent_exec_times.npy  episode_meta.json
data/agents/withdisc_deter/: dict_action_space.json
data/agents/withdisc_deter/0/: actions.npy  agent_exec_times.npy  observations.npy  rewards.npy
data/agents/withdisc_deter/0037/: rewards.npy
data/env_conf/118/: coords.csv  prods_charac.csv
data/env_conf/14/: coords.csv  prods_charac.csv
docs/: caching.rst  conf.py  index.rst  installation.rst  running-the-app.rst  starting-kit.rst
docs/views/: agent_overview.rst  agent_study.rst  scenario_overview.rst  scenario_selection.rst  simulation.rst
grid2viz/: __init__.py  app.py  app_heroku.py  app_jupyter.py  config_example.ini  index.py  layout.py  main.py  main_callbacks.py
grid2viz/assets/: loading.css  main.css
grid2viz/src/: manager.py
grid2viz/src/episodes/: __init__.py  episodes_clbk.py  episodes_lyt.py
grid2viz/src/kpi/: EpisodeAnalytics.py  EpisodeTrace.py  actions_model.py  consumption_profiles.py  env_actions.py  maintenances.py  observation_model.py
grid2viz/src/macro/: macro_clbk.py  macro_lyt.py
grid2viz/src/micro/: micro_clbk.py  micro_lyt.py
grid2viz/src/overview/: __init__.py  overview_clbk.py  overview_lyt.py
grid2viz/src/simulation/: ExpertAssist.py  reboot.py  simulation_assist.py  simulation_clbk.py  simulation_lyt.py  simulation_utils.py
grid2viz/src/utils/: __init__.py  callbacks_helpers.py  common_graph.py  constants.py  graph_utils.py  layout_helpers.py  serialization.py
legacy/: setup.py
src/: app.py  index.py  test.py
src/assets/: loading.css  main.css
src/grid2kpi/: manager.py
src/grid2kpi/episode/: __init__.py  actions_model.py  consumption_profiles.py  env_actions.py  hazards.py  maintenances.py  observation_model.py  reward.py
src/grid2kpi/episode_analytics/: EpisodeAnalytics.py  EpisodeTrace.py  actions_model.py  consumption_profiles.py  env_actions.py  maintenances.py  observation_model.py
src/grid2viz/: __init__.py  manager.py
src/grid2viz/episodes/: __init__.py  episodes_clbk.py  episodes_lyt.py
src/grid2viz/macro/: __init__.py  macro_clbk.py  macro_lyt.py
src/grid2viz/micro/: __init__.py  micro_clbk.py  micro_lyt.py  micro_shared_function.py
src/grid2viz/overview/: __init__.py  overview_clbk.py  overview_lyt.py
src/grid2viz/utils/: common_controllers.py  common_graph.py  graph_utils.py  perf_analyser.py
tests/: conftest.py  test_app_scenario.py  test_episode_analytics.py  test_generate_agent.py  test_grid2op_plot.py  test_make_cache.py  test_simulation.py  test_simulation_expert_system.py
tests/data/: config.ini  config_tests.ini
tests/data/agents/_cache/000/: alarm-baseline.dill  (+7 more)
tests/data/rte_case14_realistic/: alerts_info.json  config.py
(+162 files in other folders)
