[tool.poetry]
name = "grid2viz"
version = "1.3.4.post1"
description = "Grid2Op Visualization companion app."
readme = "README.md"
authors = [
    "Mario Jothy <mario.jothy@artelys.com>",
    "Vincent Renault <vincent.renault@artelys.com>",
    "Antoine Marot <antoine.marot@rte-france>",
    "Maxime Mohandi <maxime.mohandi@artelys.com>"
]
license = "MPL"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
]
packages = [
    { include = "grid2viz" }
]

[tool.poetry.scripts]
grid2viz = 'grid2viz.main:main'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.4"
'dash[testing]' = "^1.17.0"
pytest-dash = "^2.0.0"
dash-bootstrap-components = "^0.10.7"
dash-antd-components = "^0.0.1-rc.2"
dash-daq = "^0.5.0"
dill = "^0.3.3"
Grid2Op = "1.6.4"
gunicorn = "^20.0.4"
imageio = "^2.9.0"
jupyter-dash = { version = "^0.3.1", optional = true }
pathos = "^0.2.7"
pandapower = "^2.2.0"
matplotlib = "^3.3.3"
numpy = "^1.18.4"
seaborn = "^0.11.0"
nbgitpuller = { version = "^0.9.0", optional = true }
jupyter-server-proxy = { version = "^1.5.0", optional = true }
ExpertOp4grid = { version = "^0.1.3", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
numpydoc = "^1.1.0"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-trio = "^1.1.2"
Sphinx = "^4.0.0"

[tool.poetry.extras]
Jupyter-dash = ["jupyter-dash"]
Nbgitpuller = ["nbgitpuller"]
jupyter-server-proxy = ["jupyter-server-proxy"]
ExpertSystem = ["ExpertOp4grid"]
Docs = ["Sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
